# audible-web-downloader

./: .dockerignore  .gitignore  CLAUDE.md  DOWNLOAD_PROGRESS_IMPLEMENTATION.md  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_STATE_TRACKING.md  PHASE2_SUMMARY.md  README.md  UI_REDESIGN_SUMMARY.md  app.py  auth.py  dev.sh  docker-compose.yml  downloader.py  entrypoint.sh  importer.py  library_scanner.py  library_storage.py  plan.md  pyproject.toml  refactoring.md  requirements.txt  run.py  settings.py  test_audiobookshelf.py  test_matching.py
.claude/: settings.local.json
app/: __init__.py  models.py
app/services/: __init__.py  audio_converter.py  auth_service.py  download_service.py  import_service.py  library_manager.py  metadata_enricher.py  path_builder.py  scanner_service.py  settings_service.py  storage_service.py
app/tasks/: __init__.py
routes/: auth.py  books.py  download.py  importer.py  invite.py  library.py  main.py  scheduler.py
static/css/: app.css  downloads.css  importer.css  library.css
static/js/: accounts.js  api.js  downloads.js  importer.js  library.js  onboarding.js  settings.js  state.js  theme.js  ui.js
templates/: base.html  downloads.html  importer.html  index.html  settings.html
templates/auth/: login.html
templates/invite/: account_already_authenticated.html  landing.html  (+6 more)
tests/: test_audiobookshelf.py
utils/: account_manager.py  audio_metadata.py  auto_downloader.py  config_manager.py  constants.py  db.py  errors.py  fuzzy_matching.py  library_cache.py  oauth_flow.py  queue_base.py  scheduler.py  validation.py
