[project]
name = "audible-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audible>=0.10.0",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "mutagen>=1.47.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.48.1",
    "wtforms>=3.2.1",
]
